--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -61,7 +61,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/welcome">Home</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/newpost">Post
                 </a>
               </li>
@@ -110,8 +110,7 @@
                 <img src="images/user/user-thumb.jpg" alt="" class="rounded-circle">
               </div>
               <!-- User Name -->
-              <h5 class="text-center">田辺重蔵</h5>
-              <p>1,204,93 follower</p>
+              <h5 class="text-center"><%= current_user.name %></h5>
               <a href="#!" data-toggle="modal" data-target="#deleteaccount" class="btn btn-main-sm">プロフィールを更新</a>
             </div>
             <!-- Dashboard Links -->
@@ -191,29 +190,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td class="product-thumb">
-                          <img width="80px" height="auto" src="images/products/products-1.jpg" alt="image description"></td>
-                        <td class="product-details">
-                          <h3 class="title">Macbook Pro 15inch</h3>
-                          <span class="add-id"><strong>Ad ID:</strong> ng3D5hAMHPajQrM</span>
-                          <span><strong>Posted on: </strong><time>Jun 27, 2017</time> </span>
-                          <span class="status active"><strong>Status</strong>Active</span>
-                          <span class="location"><strong>Location</strong>Dhaka,Bangladesh</span>
-                        </td>
-                        <td class="product-category"><span class="categories">Laptops</span></td>
-                        <td class="action" data-title="Action">
-                          <div class="">
-                            <ul class="list-inline justify-content-center">
-                              <li class="list-inline-item">
-                                <a data-toggle="tooltip" data-placement="top" title="view" class="view" href="category.html">
-                                  <i class="fa fa-eye"></i>
-                                </a>
-                              </li>
-                            </ul>
-                          </div>
-                        </td>
-                      </tr>
+                      <!-- 投稿したイベント -->
                     </tbody>
                   </table>
                 </div>
@@ -263,108 +240,6 @@
     </div>
     <!-- Container End -->
   </section>
-
-<!--============================
-=            Footer            =
-=============================-->
-
-<footer class="footer section section-sm">
-  <!-- Container Start -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-3 col-md-7 offset-md-1 offset-lg-0 mb-4 mb-lg-0">
-        <!-- About -->
-        <div class="block about">
-          <!-- footer logo -->
-          <img src="images/logo-footer.png" alt="logo">
-          <!-- description -->
-          <p class="alt-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-      </div>
-      <!-- Link list -->
-      <div class="col-lg-2 offset-lg-1 col-md-3 col-6 mb-4 mb-lg-0">
-        <div class="block">
-          <h4>Site Pages</h4>
-          <ul>
-            <li><a href="dashboard-my-ads.html">My Ads</a></li>
-            <li><a href="dashboard-favourite-ads.html">Favourite Ads</a></li>
-            <li><a href="dashboard-archived-ads.html">Archived Ads</a></li>
-            <li><a href="dashboard-pending-ads.html">Pending Ads</a></li>
-            <li><a href="terms-condition.html">Terms & Conditions</a></li>
-          </ul>
-        </div>
-      </div>
-      <!-- Link list -->
-      <div class="col-lg-2 col-md-3 offset-md-1 offset-lg-0 col-6 mb-4 mb-md-0">
-        <div class="block">
-          <h4>Admin Pages</h4>
-          <ul>
-            <li><a href="category.html">Category</a></li>
-            <li><a href="single.html">Single Page</a></li>
-            <li><a href="store.html">Store Single</a></li>
-            <li><a href="single-blog.html">Single Post</a>
-            </li>
-            <li><a href="blog.html">Blog</a></li>
-
-
-
-          </ul>
-        </div>
-      </div>
-      <!-- Promotion -->
-      <div class="col-lg-4 col-md-7">
-        <!-- App promotion -->
-        <div class="block-2 app-promotion">
-          <div class="mobile d-flex  align-items-center">
-            <a href="index.html">
-              <!-- Icon -->
-              <img src="images/footer/phone-icon.png" alt="mobile-icon">
-            </a>
-            <p class="mb-0">Get the Dealsy Mobile App and Save more</p>
-          </div>
-          <div class="download-btn d-flex my-3">
-            <a href="index.html"><img src="images/apps/google-play-store.png" class="img-fluid" alt=""></a>
-            <a href="index.html" class=" ml-3"><img src="images/apps/apple-app-store.png" class="img-fluid" alt=""></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Container End -->
-</footer>
-<!-- Footer Bottom -->
-<footer class="footer-bottom">
-  <!-- Container Start -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 text-center text-lg-left mb-3 mb-lg-0">
-        <!-- Copyright -->
-        <div class="copyright">
-          <p>Copyright &copy; <script>
-              var CurrentYear = new Date().getFullYear()
-              document.write(CurrentYear)
-            </script>. Designed & Developed by <a class="text-white" href="https://themefisher.com">Themefisher</a></p>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <!-- Social Icons -->
-        <ul class="social-media-icons text-center text-lg-right">
-          <li><a class="fa fa-facebook" href="https://www.facebook.com/themefisher"></a></li>
-          <li><a class="fa fa-twitter" href="https://www.twitter.com/themefisher"></a></li>
-          <li><a class="fa fa-pinterest-p" href="https://www.pinterest.com/themefisher"></a></li>
-          <li><a class="fa fa-github-alt" href="https://www.github.com/themefisher"></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- Container End -->
-  <!-- To Top -->
-  <div class="scroll-top-to">
-    <i class="fa fa-angle-up"></i>
-  </div>
-</footer>
 
 <!-- 
 Essential Scripts
