--- a/app/assets/stylesheets/css/style.css
+++ b/app/assets/stylesheets/css/style.css
@@ -8,6 +8,14 @@
 /*=== MEDIA QUERY ===*/
 @import url("https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900");
 
+
+#map {
+  height: 400px;
+  width: 100%;
+}
+
+
+
 body {
   line-height: 1.5;
   font-family: "Muli", sans-serif;
