--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -176,7 +176,7 @@
                   <img width="80px" height="auto"  alt="image description"></td>
                 <td class="product-details">
                   <h3 class="title"><%= post.event_name %></h3>
-                  <span class="add-id"><strong>Ad ID:</strong> <%= post.id %></span>
+                  <span class="add-id"><strong>Start Date:</strong> <%= post.start_date %></span>
                   <span><strong>Posted on: </strong><time><%= post.created_at.strftime('%b %d, %Y') %></time> </span>
                   <span class="location"><strong>Location</strong><%= post.district %></span>
                 </td>
