--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -105,53 +105,33 @@
 				<!-- Header Contetnt -->
 				<div class="content-block">
 					<h1>浜松市のイベント一覧</h1>
-					<div class="short-popular-category-list text-center">
-						<h2>Popular Category</h2>
-						<ul class="list-inline">
-							<li class="list-inline-item">
-								<a href="category.html"><i class="fa fa-bed"></i> Hotel</a></li>
-							<li class="list-inline-item">
-								<a href="category.html"><i class="fa fa-grav"></i> Fitness</a>
-							</li>
-							<li class="list-inline-item">
-								<a href="category.html"><i class="fa fa-car"></i> Cars</a>
-							</li>
-							<li class="list-inline-item">
-								<a href="category.html"><i class="fa fa-cutlery"></i> Restaurants</a>
-							</li>
-							<li class="list-inline-item">
-								<a href="category.html"><i class="fa fa-coffee"></i> Cafe</a>
-							</li>
-						</ul>
-					</div>
+
 
 				</div>
 				<div class="advance-search">
 					<div class="container">
 						<div class="row justify-content-center">
 							<div class="col-lg-12 col-md-12 align-content-center">
-								<form>
-									<div class="form-row">
-										<div class="form-group col-xl-4 col-lg-3 col-md-6">
-											<input type="text" class="form-control my-2 my-lg-1" id="inputtext4"
-												placeholder="What are you looking for">
-										</div>
-										<div class="form-group col-lg-3 col-md-6">
-											<select class="w-100 form-control mt-lg-1 mt-md-2">
-												<option>Category</option>
-												<option value="1">Top rated</option>
-												<option value="2">Lowest Price</option>
-												<option value="4">Highest Price</option>
-											</select>
-										</div>
-										<div class="form-group col-lg-3 col-md-6">
-											<input type="text" class="form-control my-2 my-lg-1" id="inputLocation4" placeholder="Location">
-										</div>
-										<div class="form-group col-xl-2 col-lg-3 col-md-6 align-self-center">
-											<button type="submit" class="btn btn-primary active w-100">Search Now</button>
-										</div>
-									</div>
-								</form>
+              <form action="/search" method="post">
+                <div class="form-row">
+                  <div class="form-group col-xl-4 col-lg-3 col-md-6">
+                    <input type="text" class="form-control my-2 my-lg-1" id="inputtext4" name="query" placeholder="What are you looking for">
+                  </div>
+                  <div class="form-group col-lg-3 col-md-6">
+                    <select class="w-100 form-control mt-lg-1 mt-md-2" name="category">
+                      <% @categories.each do |category, count| %>
+                        <option value="<%= category %>"><%= category %></option>
+                      <% end %>
+                    </select>
+                  </div>
+                  <div class="form-group col-lg-3 col-md-6">
+                    <input type="text" class="form-control my-2 my-lg-1" id="inputLocation4" name="location" placeholder="Location">
+                  </div>
+                  <div class="form-group col-xl-2 col-lg-3 col-md-6 align-self-center">
+                    <button type="submit" class="btn btn-primary active w-100">Search Now</button>
+                  </div>
+                </div>
+              </form>
 							</div>
 						</div>
 					</div>
