--- a/app/views/profile/new.html.erb
+++ b/app/views/profile/new.html.erb
@@ -43,14 +43,13 @@
 
 <body class="body-wrapper">
 
-
 <header>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <nav class="navbar navbar-expand-lg navbar-light navigation">
           <a class="navbar-brand" href="/welcome">
-            <img src="/../assets/HEH.png" alt="">
+            <img src="/../assets/images/HEH.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,14 +57,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto main-nav ">
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/welcome">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/newpost">Post
                 </a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/posts">Events
                 </a>
               </li>
@@ -93,113 +92,31 @@
     </div>
   </div>
 </header>
-<!--==================================
-=            User Profile            =
-===================================-->
-<section class="dashboard section">
-  <!-- Container Start -->
+
+<section class="login py-5 border-top-1">
   <div class="container">
-    <!-- Row Start -->
-    <div class="row">
-      <div class="col-lg-4">
-        <div class="sidebar">
-          <!-- Filter Widget -->
-          <div class="widget user-dashboard-menu">
-            <h3 class="widget-header">Filter by</h3>
-            <ul>
-              <li>
-                <a href="<%= posts_path %>"><i class="fa fa-angle-right"></i> All Posts</a>
-              </li>
-            <% @categories.each do |category, count| %>
-              <li>
-                <a href="<%= posts_path(category: category) %>"><i class="fa fa-angle-right"></i> <%= category %> (<%= count %>)</a>
-              </li>
-            <% end %>
-            </ul>
-            <h3 class="widget-header">Location</h3>
-            <ul>
-            <% @location.each do |location, count| %>
-              <li>
-                <a href="<%= posts_path(location: location) %>"><i class="fa fa-angle-right"></i> <%= location %> (<%= count %>)</a>
-              </li>
-            <% end %>
-            </ul>
-          </div>
-
-          <!-- delete-account modal -->
-          <!-- delete account popup modal start-->
-<!-- Modal -->
-<div class="modal fade" id="deleteaccount" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-  aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header border-bottom-0">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body text-center">
-        <img src="images/account/Account1.png" class="img-fluid mb-2" alt="">
-        <h6 class="py-2">Are you sure you want to delete your account?</h6>
-        <p>Do you really want to delete these records? This process cannot be undone.</p>
-        <textarea class="form-control" name="message" id="" cols="40" rows="4" class="w-100 rounded"></textarea>
-      </div>
-      <div class="modal-footer border-top-0 mb-3 mx-5 justify-content-center">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger">Delete</button>
+    <div class="row justify-content-center">
+      <div class="col-lg-5 col-md-8 align-item-center">
+        <div class="border border">
+          <h3 class="bg-gray p-4">Register Now</h3>
+          <%= form_for User.new, url: {action: "create"} do |f| %>
+            <fieldset class="p-4">
+              <%= f.email_field :email, class: 'form-control mb-3', placeholder: 'Email*', required: true %>
+              <%= f.password_field :password, class: 'form-control mb-3', placeholder: 'Password*', required: true %>
+              <%= f.password_field :password_confirmation, class: 'form-control mb-3', placeholder: 'Confirm Password*', required: true %>
+              <div class="loggedin-forgot d-inline-flex my-3">
+                <input type="checkbox" id="registering" class="mt-1">
+                <label for="registering" class="px-2">By registering, you accept our <a class="text-primary font-weight-bold" href="terms-condition.html">Terms & Conditions</a></label>
+              </div>
+              <%= f.submit "Register Now", class: "btn btn-primary font-weight-bold mt-3" %>
+            </fieldset>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!-- delete account popup modal end-->
-          <!-- delete-account modal -->
-
-        </div>
-      </div>
-      <div class="col-lg-8">
-        <!-- Recently Favorited -->
-        <div class="widget dashboard-container my-adslist">
-          <h3 class="widget-header">イベント一覧</h3>
-          <table class="table table-responsive product-dashboard-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>イベント名</th>
-                <th class="text-center">カテゴリー</th>
-                <th class="text-center">いいね</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @event_lists.each do |post| %>
-              <tr>
-                <td class="product-thumb">
-                <td class="product-details">
-                  <h3 class="title"><%= link_to post.event_name , single_show_path(post.id) %></h3>
-                  <span class="add-id"><strong>Start Date:</strong> <%= post.start_date %></span>
-                  <span><strong>Posted on: </strong><time><%= post.created_at.strftime('%b %d, %Y') %></time> </span>
-                  <span class="location"><strong>Location</strong><%= post.district %></span>
-                </td>
-                <td class="product-category"><span class="categories"><%= post.category %></span></td>
-                <td class="action" data-title="Action">
-                  <%= render "favorites/btn", post: post %>
-                </td>
-              </tr>
-              <% end %>
-            </tbody>
-          </table>
-
-        </div>
-
-        <!-- pagination -->
-        <%= will_paginate @event_lists, renderer: BootstrapPagination::Rails %>
-        <!-- pagination -->
-
-      </div>
-    </div>
-    <!-- Row End -->
-  </div>
-  <!-- Container End -->
 </section>
+
 
 <!-- 
 Essential Scripts
