--- a/app/views/single/index.html.erb
+++ b/app/views/single/index.html.erb
@@ -153,7 +153,7 @@
           <div class="sidebar">
             <!-- User Profile widget -->
             <div class="widget user text-center">
-              <img class="rounded-circle img-fluid mb-5 px-5" src="images/user/user-thumb.jpg" alt="">
+              <img class="rounded-circle img-fluid mb-5 px-5" src="/../assets/images/user/user-thumb.jpg" alt="">
               <h4><%=  %></h4>
               <!-- <a href="single.html">See all ads</a> -->
               <ul class="list-inline mt-20">
