--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -107,7 +107,7 @@
             <div class="widget user-dashboard-profile">
               <!-- User Image -->
               <div class="profile-thumb">
-                <img src="/../assets/images/user/user-thumb.jpg" alt="" class="rounded-circle">
+                <%= image_tag(current_user.photo.attached? ? current_user.photo : "/../assets/Account1.png") %>
               </div>
               <!-- User Name -->
               <h5 class="text-center"><%= current_user.name %></h5>
