--- a/app/views/profile/new.html.erb
+++ b/app/views/profile/new.html.erb
@@ -49,7 +49,7 @@
       <div class="col-md-12">
         <nav class="navbar navbar-expand-lg navbar-light navigation">
           <a class="navbar-brand" href="/welcome">
-            <img src="/../assets/images/HEH.png" alt="">
+            <img src="/../assets/HEH.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -105,6 +105,7 @@
               <%= f.email_field :email, class: 'form-control mb-3', placeholder: 'Email*', required: true %>
               <%= f.password_field :password, class: 'form-control mb-3', placeholder: 'Password*', required: true %>
               <%= f.password_field :password_confirmation, class: 'form-control mb-3', placeholder: 'Confirm Password*', required: true %>
+              <%= f.label :photo %><%= f.file_field :photo, placeholder: 'Upload Profile Photo*'%>
               <div class="loggedin-forgot d-inline-flex my-3">
                 <input type="checkbox" id="registering" class="mt-1">
                 <label for="registering" class="px-2">By registering, you accept our <a class="text-primary font-weight-bold" href="terms-condition.html">Terms & Conditions</a></label>
