--- a/app/views/single/index.html.erb
+++ b/app/views/single/index.html.erb
@@ -53,7 +53,7 @@
       <div class="col-md-12">
         <nav class="navbar navbar-expand-lg navbar-light navigation">
           <a class="navbar-brand" href="/welcome">
-            <img src="/../assets/images/HEH.png" alt="">
+            <img src="/../assets/HEH.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -175,7 +175,7 @@
           <div class="sidebar">
             <!-- User Profile widget -->
             <div class="widget user text-center">
-              <img class="rounded-circle img-fluid mb-5 px-5" src="/../assets/images/user/user-thumb.jpg" alt="">
+              <img class="rounded-circle img-fluid mb-5 px-5" src="/../assets/Account1.png" alt="">
               <h4><%=  %></h4>
               <!-- <a href="single.html">See all ads</a> -->
               <ul class="list-inline mt-20">
