--- a/app/views/favorites/_btn.html.erb
+++ b/app/views/favorites/_btn.html.erb
@@ -1,11 +1,13 @@
-<% if logged_in? && post.favorited_by?(current_user) %>
-  <%= button_to post_favorites_path(post), method: :delete do %>
-    <span style="color:red;">❤︎</span></i>
-    <%= post.favorites.length %>
-  <% end %>
-<% else %>
-  <%= button_to post_favorites_path(post), method: :post do %>
-    <span style="color:red;">❤︎</span></i>
-    <%= post.favorites.length %> 
+<% if logged_in? %>
+  <% if post.favorited_by?(current_user) %>
+    <%= button_to post_favorites_path(post), method: :delete do %>
+      <span style="color:red;">❤︎</span></i>
+      <%= post.favorites.length %>
+    <% end %>
+  <% else %>
+    <%= button_to post_favorites_path(post), method: :post do %>
+      <span style="color:red;">❤︎</span></i>
+      <%= post.favorites.length %> 
+    <% end %>
   <% end %>
 <% end %>
