--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -139,8 +139,6 @@
         </button>
       </div>
       <div class="modal-body text-center">
-        <img src="/../assets/Account1.png" class="img-fluid mb-2" alt="">
-        <%= image_tag(current_user.photo.attached? ? current_user.photo : "/../assets/Account1.png") %>
         <h6 class="py-2">Are you sure you want to delete your account?</h6>
         <p>Do you really want to delete these records? This process cannot be undone.</p>
         <textarea class="form-control" name="message" id="" cols="40" rows="4" class="w-100 rounded"></textarea>
@@ -158,6 +156,32 @@
         </div>
       </div>
       <div class="col-lg-8">
+      					<div class="container">
+						<div class="row justify-content-center">
+							<div class="col-lg-12 col-md-12 align-content-center">
+              <form action="/search" method="get">
+                <div class="form-row">
+                  <div class="form-group col-xl-4 col-lg-3 col-md-6">
+                    <input type="text" class="form-control my-2 my-lg-1" id="inputtext4" name="query" placeholder="What are you looking for">
+                  </div>
+                  <div class="form-group col-lg-3 col-md-6">
+                    <select class="w-100 form-control mt-lg-1 mt-md-2" name="category">
+                      <% @categories.each do |category, count| %>
+                        <option value="<%= category %>"><%= category %></option>
+                      <% end %>
+                    </select>
+                  </div>
+                  <div class="form-group col-lg-3 col-md-6">
+                    <input type="text" class="form-control my-2 my-lg-1" id="inputLocation4" name="location" placeholder="Location">
+                  </div>
+                  <div class="form-group col-xl-2 col-lg-3 col-md-6 align-self-center">
+                    <button type="submit" class="btn btn-primary active w-100">Search</button>
+                  </div>
+                </div>
+              </form>
+							</div>
+						</div>
+					</div>
         <!-- Recently Favorited -->
         <div class="widget dashboard-container my-adslist">
           <h3 class="widget-header">イベント一覧</h3>
